apps/base/scylla/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scylla
  labels:
    name: scylla
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
